<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_menu_main"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_patients"
            android:icon="@drawable/ic_account_box_black"
            android:title="@string/patients" />

        <item
            android:id="@+id/nav_consultation"
            android:icon="@drawable/ic_local_hospital"
            android:title="@string/consultation" />

        <item
            android:id="@+id/nav_financial"
            android:icon="@drawable/ic_baseline_bar_chart"
            android:title="@string/financial" />

    </group>

    <group
        android:id="@+id/group_menu_2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black"
            android:title="@string/about" />
    </group>


</menu>